--- a/app/toDoList/features/createToDo/createToDo.html
+++ b/app/toDoList/features/createToDo/createToDo.html
@@ -1,5 +1,5 @@
 <ul class="nav nav-tabs">
-    <li role="presentation" class="active"><a ui-sref="listToDos">List</a></li>
-    <li role="presentation"><a ui-sref="createToDo">Create</a></li>
+    <li role="presentation"><a ui-sref="listToDos">List</a></li>
+    <li role="presentation" class="active"><a ui-sref="createToDo">Create</a></li>
     <li role="presentation"><a ui-sref="completedToDos">Completed</a></li>
 </ul>
