Got the database linked and functioning.

--- a/app/toDoList/features/listToDos/listToDos.html
+++ b/app/toDoList/features/listToDos/listToDos.html
@@ -3,3 +3,7 @@
     <li role="presentation"><a ui-sref="createToDo">Create</a></li>
     <li role="presentation"><a ui-sref="completedToDos">Completed</a></li>
 </ul>
+
+<div ng-if="">
+
+</div>
