--- a/app/toDoList/features/listToDos/listToDos.html
+++ b/app/toDoList/features/listToDos/listToDos.html
@@ -4,6 +4,8 @@
     <li role="presentation"><a ui-sref="completedToDos">Completed</a></li>
 </ul>
 
-<div ng-if="">
+<ul>
+    <li ng-repeat="todo in ListVM.todol">
 
-</div>
+    </li>
+</ul>
