List To-Dos is now properly displaying data.

--- a/app/toDoList/features/listToDos/listToDos.html
+++ b/app/toDoList/features/listToDos/listToDos.html
@@ -5,7 +5,7 @@
 </ul>
 
 <ul>
-    <li ng-repeat="todo in ListVM.todos">
-
+    <li ng-repeat="todo in ListVM.todos" ng-if="todo.status !== true">
+        <input type="checkbox" name="complete"> {{todo.todo}}
     </li>
 </ul>
