--- a/app/toDoList/features/listToDos/listToDos.html
+++ b/app/toDoList/features/listToDos/listToDos.html
@@ -6,6 +6,6 @@
 
 <ul>
     <li ng-repeat="todo in ListVM.todos" ng-if="todo.status !== true">
-        <input type="checkbox" name="complete"> {{todo.todo}}
+        <input type="checkbox" name="complete" ng-click="CompletedVM.updatedToDo()"> {{todo.todo}}
     </li>
 </ul>
